<resources>
    <string name="app_name">weatherforecast</string>
    <string name="hintSearchCity">Input city name...</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="speedwind">SpeedWind</string>
    <string name="temperatureMax">Temp Max</string>
    <string name="temperatureMin">Temp Min</string>
    <string name="clouds">Clouds</string>
    <string name="loading">Loading</string>
    <string name="notInternet">Not Connect Internet</string>
</resources>
