<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/coordinatorLayout"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@drawable/background_default_location"
                  android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_default_location_city"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="HaNoi"
                android:textColor="@android:color/white"
                android:textSize="30sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txt_default_location_temp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end|bottom"
                    android:text="30"
                    android:textColor="@android:color/white"
                    android:textSize="40sp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:gravity="bottom"
                        android:text="o"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_weight="2.5"
                        android:gravity="bottom"
                        android:text="C"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"/>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_default_location_time"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="30sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    style="@style/defaultLocationNameWeather"
                    android:text="@string/temperatureMax"/>

                <TextView
                    android:id="@+id/txt_default_location_temp_max"
                    style="@style/defaultLocationValueWeather"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    style="@style/defaultLocationNameWeather"
                    android:text="@string/temperatureMin"/>

                <TextView
                    android:id="@+id/txt_default_location_temp_min"
                    style="@style/defaultLocationValueWeather"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    style="@style/defaultLocationNameWeather"
                    android:text="@string/humidity"
                    />

                <TextView
                    android:id="@+id/txt_default_location_humidity"
                    style="@style/defaultLocationValueWeather"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    style="@style/defaultLocationNameWeather"
                    android:text="@string/speedwind"/>

                <TextView
                    android:id="@+id/txt_default_location_speed_wind"
                    style="@style/defaultLocationValueWeather"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    style="@style/defaultLocationNameWeather"
                    android:text="@string/clouds"
                    />

                <TextView
                    android:id="@+id/txt_default_location_clouds"
                    style="@style/defaultLocationValueWeather"/>
            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_plus"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
